dmpcs_labs: completed second lab

--- a/dmPCs_labs/dmPCs/dmPCs.csproj
+++ b/dmPCs_labs/dmPCs/dmPCs.csproj
@@ -5,10 +5,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>dmpcs</AssemblyName>
+        <RootNamespace>dmpcs</RootNamespace>
+        <LangVersion>10</LangVersion>
+        <ApplicationIcon>Assets\csharp-plain.ico</ApplicationIcon>
     </PropertyGroup>
-
-    <ItemGroup>
-      <Folder Include="Assets" />
-    </ItemGroup>
 
 </Project>
